# threadforge

./: CMakeLists.txt  README.md
docs/: oop_principles.md  os_threading.md  task.md
include/: Task.h  Tasks.h  ThreadPool.h  ThreadSafeQueue.h  ThreadSafeTaskQueue.h  Worker.h
src/: Task.cpp  ThreadPool.cpp  Worker.cpp  main.cpp
viz/: index.html
